fixed z-index conflict with the alert message

--- a/Assets/css/moon.css
+++ b/Assets/css/moon.css
@@ -3198,7 +3198,7 @@ span.task-date-overdue {
     display: block;
     width: 50px;
     height: 50px;
-    z-index: 99;
+    z-index: 10000;
     transition: all 0.4s;
     -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
